--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "svelte-app",
-  "version": "1.0.0",
+  "name": "green-spectator-vite",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public --no-clear"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --ext .js --ext .svelte",
+    "fix": "eslint . --ext .js --ext .svelte --fix"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^22.0.1",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "rollup": "^2.77.0",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-svelte": "^7.1.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.49.0"
+    "@sveltejs/vite-plugin-svelte": "^1.0.1",
+    "eslint": "^8.20.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "svelte": "^3.49.0",
+    "vite": "^3.0.0"
   },
   "dependencies": {
-    "echarts": "5.3.3",
-    "echarts-for-svelte": "^0.1.11",
-    "sirv-cli": "^2.0.2",
-    "svelte-spa-router": "^3.2.0"
+    "echarts": "^5.3.3"
   }
 }
