--- a/package.json
+++ b/package.json
@@ -12,21 +12,23 @@
   },
   "license": "Unlicense",
   "devDependencies": {
+    "@solidjs/router": "^0.5.0",
     "eslint": "^8.25.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.3.0",
-    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-promise": "^6.1.0",
     "eslint-plugin-solid": "^0.7.3",
     "prettier": "^2.7.1",
     "prettier-eslint-cli": "^7.1.0",
     "typescript": "^4.8.4",
     "unocss": "^0.45.29",
-    "vite": "^3.1.7",
-    "vite-plugin-eslint": "^1.8.1",
+    "unocss-preset-chroma": "^0.3.0",
+    "vite": "^3.1.8",
     "vite-plugin-solid": "^2.3.9"
   },
   "dependencies": {
+    "@motionone/solid": "^10.14.2",
     "solid-js": "^1.5.7"
   }
 }
