--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "vite",
     "dev": "vite",
-    "build:sitemap": "jiti scripts/generateSitemap.js",
-    "build:meta": "jiti scripts/generateMeta.js",
+    "build:sitemap": "node ./scripts/generateSitemap.js",
+    "build:meta": "node ./scripts/generateMeta.js",
     "build:vite": "vite build",
     "build": "run-s build:vite build:meta build:sitemap",
     "serve": "vite preview",
@@ -21,19 +21,18 @@
     "eslint": "^8.27.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.5.0",
+    "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-solid": "^0.8.0",
     "htmlnano": "^2.0.2",
-    "jiti": "^1.16.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "prettier-eslint-cli": "^7.1.0",
     "remark-gfm": "^3.0.1",
-    "rollup": "^3.2.5",
+    "rollup": "^3.3.0",
     "solid-mdx": "^0.0.6",
     "typescript": "^4.8.4",
-    "unocss": "^0.46.3",
+    "unocss": "^0.46.4",
     "vite": "^3.2.3",
     "vite-plugin-solid": "^2.4.0"
   },
@@ -42,6 +41,6 @@
     "@solid-primitives/i18n": "^1.1.2",
     "@solidjs/router": "^0.5.0",
     "d3": "^7.6.1",
-    "solid-js": "^1.6.1"
+    "solid-js": "^1.6.2"
   }
 }
