--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "scripts": {
     "start": "vite",
     "dev": "vite",
-    "build:sitemap": "node ./scripts/generateSitemap.js",
-    "build:meta": "node ./scripts/generateMeta.js",
-    "build:vite": "vite build",
-    "build": "run-s build:vite build:meta build:sitemap",
+    "build": "vite build",
     "serve": "vite preview",
     "lint": "eslint src --ext .js --ext .jsx",
     "format": "prettier-eslint \"src/**/*.js\" \"src/**/*.jsx\" \"src/**/*.mdx\" --write"
@@ -23,16 +20,17 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-solid": "^0.8.0",
+    "eslint-plugin-solid": "^0.9.1",
     "htmlnano": "^2.0.3",
-    "npm-run-all": "^4.1.5",
+    "js-yaml": "^4.1.0",
     "prettier": "^2.8.0",
     "prettier-eslint-cli": "^7.1.0",
+    "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
-    "rollup": "^3.4.0",
+    "rollup": "^3.5.0",
     "solid-mdx": "^0.0.6",
     "typescript": "^4.9.3",
-    "unocss": "^0.46.5",
+    "unocss": "^0.47.3",
     "vite": "^3.2.4",
     "vite-plugin-solid": "^2.4.0"
   },
