--- a/package.json
+++ b/package.json
@@ -4,41 +4,39 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview",
+    "dev": "node ./scripts/parseArticles.js & vite",
+    "build": "node ./scripts/parseArticles.js & vite build",
     "lint": "eslint src --ext .js --ext .jsx",
     "format": "prettier-eslint \"src/**/*.js\" \"src/**/*.jsx\" \"src/**/*.mdx\" --write"
   },
   "license": "Unlicense",
   "devDependencies": {
     "@aminya/minijson": "^0.6.2",
-    "@mdx-js/rollup": "^2.1.5",
-    "eslint": "^8.28.0",
+    "@mdx-js/rollup": "^2.2.1",
+    "eslint": "^8.30.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-n": "^15.6.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-solid": "^0.9.1",
     "htmlnano": "^2.0.3",
     "js-yaml": "^4.1.0",
-    "prettier": "^2.8.0",
+    "prettier": "^2.8.1",
     "prettier-eslint-cli": "^7.1.0",
     "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
-    "rollup": "^3.5.0",
+    "rollup": "^3.8.1",
     "solid-mdx": "^0.0.6",
-    "typescript": "^4.9.3",
-    "unocss": "^0.47.3",
-    "vite": "^3.2.4",
-    "vite-plugin-solid": "^2.4.0"
+    "typescript": "^4.9.4",
+    "unocss": "^0.48.0",
+    "vite": "^4.0.3",
+    "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
-    "@motionone/solid": "^10.14.3",
+    "@motionone/solid": "^10.15.4",
     "@solid-primitives/i18n": "^1.1.2",
-    "@solidjs/router": "^0.5.1",
-    "d3": "^7.6.1",
-    "solid-js": "^1.6.2"
+    "@solidjs/router": "^0.6.0",
+    "d3": "^7.8.0",
+    "solid-js": "^1.6.6"
   }
 }
