--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@solid-primitives/i18n": "^1.1.2",
     "@solidjs/router": "^0.6.0",
     "d3": "^7.8.0",
-    "solid-js": "^1.6.8"
+    "solid-js": "^1.6.8",
+    "swiper": "^8.4.5"
   }
 }
