--- a/package.json
+++ b/package.json
@@ -10,34 +10,33 @@
     "format": "prettier-eslint \"src/**/*.js\" \"src/**/*.jsx\" \"src/**/*.mdx\" --write"
   },
   "license": "Unlicense",
-  "devDependencies": {
+  "dependencies": {
     "@aminya/minijson": "^0.6.2",
     "@mdx-js/rollup": "^2.2.1",
+    "@motionone/solid": "^10.15.4",
+    "@solid-primitives/i18n": "^1.1.2",
+    "@solidjs/router": "^0.6.0",
+    "chartist": "^1.3.0",
+    "d3": "^7.8.0",
     "eslint": "^8.30.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.6.0",
+    "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-solid": "^0.9.1",
+    "eslint-plugin-solid": "^0.9.2",
     "htmlnano": "^2.0.3",
     "js-yaml": "^4.1.0",
-    "prettier": "^2.8.1",
+    "prettier": "^2.8.2",
     "prettier-eslint-cli": "^7.1.0",
     "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
     "rollup": "^3.8.1",
+    "solid-js": "^1.6.8",
     "solid-mdx": "^0.0.6",
+    "swiper": "^8.4.5",
     "typescript": "^4.9.4",
-    "unocss": "^0.48.1",
+    "unocss": "^0.48.3",
     "vite": "^4.0.3",
     "vite-plugin-solid": "^2.5.0"
-  },
-  "dependencies": {
-    "@motionone/solid": "^10.15.4",
-    "@solid-primitives/i18n": "^1.1.2",
-    "@solidjs/router": "^0.6.0",
-    "d3": "^7.8.0",
-    "solid-js": "^1.6.8",
-    "swiper": "^8.4.5"
   }
 }
